--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,6 @@
-//
+@import "fortawesome/fontawesome-free/";
+@import "fontawesome/scss/solid.scss";
+@import "fontawesome/scss/brands.scss";
 * {
     margin: 0;
     padding: 0;
@@ -9,30 +11,51 @@
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 20px;
+    table{
+        border-radius: 20px;
+    }
 
     .table {
         width: 100%;
         text-align: center;
         border: 1px solid #000;
         border-collapse: collapse;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
         tr {
             padding: 20px;
-            border: 1px solid #000;
+            border: 1px solid #ccc;
 
             th {
                 padding: 20px;
                 border: 1px solid rgb(209, 209, 209);
 
-                background-color: #0a49ffa3;
+                background-color: #2565AE;
                 color: #fff;
             }
         }
         td {
             padding: 20px;
-            border: 1px solid #000;
-            background-color: #deeffb;
+            border: 1px solid #ccc;
+            background-color: #fff;
             // background-color: #000;
 
+        }
+        .delete{
+            text-decoration: none;
+            background-color: #f51010;
+            padding: 12px;
+            border-radius: 10px;
+            color: #fff;
+            margin-right: 10px;
+        }
+        .edit{
+           
+            text-decoration: none;
+            background-color: #2565AE;
+            padding: 12px;
+            border-radius: 10px;
+            color: #fff;
+           
         }
     }
 }
